updating club affiliation

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ ThapeloOnTheRun
                      @ThapeloOnTheRun
                 </h3>
                 <p class="hero-content">
-                    Recreational runner and a coach wannabe.
+                    Recreational runner (Club: Unisa Athletic Club - AGN) and a coach wannabe.
                 </p>
                 <div class="row">
                     <div class="col-auto h-100">
